--- a/homework2/style.css
+++ b/homework2/style.css
@@ -2,13 +2,19 @@
     margin: 0;
     padding: 0;
 }
+
+
+.nav-menu-item{
+    display: inline-block;
+    padding-left: 330px;
+    padding-top: 25.5px;
+}
+
 .nav-menu{
-        display: inline-flex;
-        margin-left: 72px;
-        padding-left: 168px;
-        margin-top: 25.5px;
-        color: red;
-        text-decoration: none;
+    margin-right: 150px;
+    font-size: 18px;
+    color: red;
+    text-decoration: none;
     
     
 
